// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RealtimeMessagingIntegrationInstall component should display a placeholder if there's no Shopify store without chat, andshould display the list of Shopify stores where the chat is installed 1`] = `
<div>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          mychat
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Installation
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <RealtimeMessagingIntegrationNavigation
    integration={
      Immutable.Map {
        id: 2,
        name: "mychat",
        type: "smooch_inside",
        meta: Immutable.Map {
          shopify_integration_ids: Immutable.List [
            1,
          ],
          script_url: "config.gorgias.io/foo/chat/bar",
        },
      }
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p>
          Let's install your chat on your website.
        </p>
        <div>
          <p>
            Chat
             installed on
             
            mylittleintegration
            .
             
            <a
              href={true}
              onClick={[Function]}
            >
              Remove
            </a>
          </p>
        </div>
        <div
          className="form shopifyIntegrationsList"
        >
          <Button
            block={true}
            className="mb-2"
            color="secondary"
            onClick={[Function]}
            tag="button"
          >
            <img
              className="shopifyLogo"
              src="test-file-stub"
            />
            Add 
            chat
             on 
            mylittleintegration
          </Button>
          <p>
            Can't see your store here?
             
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/settings/integrations/shopify/new/"
            >
              Connect it to Gorgias
            </Link>
          </p>
          <div
            className="divider"
          >
            OR
          </div>
          <Form
            onSubmit={[Function]}
            tag="form"
          >
            <p>
              Copy the code below and paste it on your website above the
               
              <kbd>
                &lt;/body&gt;
              </kbd>
               
              tag:
            </p>
            <div
              className="snippet"
            >
              <Card
                className="p-0 mb-2"
                tag="div"
              >
                <Alert
                  className="m-0"
                  closeAriaLabel="Close"
                  color="info"
                  isOpen={true}
                  tag="div"
                  transition={
                    Object {
                      "appear": true,
                      "baseClass": "fade",
                      "baseClassActive": "show",
                      "enter": true,
                      "exit": true,
                      "in": true,
                      "mountOnEnter": false,
                      "onEnter": [Function],
                      "onEntered": [Function],
                      "onEntering": [Function],
                      "onExit": [Function],
                      "onExited": [Function],
                      "onExiting": [Function],
                      "tag": "div",
                      "timeout": 150,
                      "unmountOnExit": true,
                    }
                  }
                >
                  <pre
                    id="code-snippet"
                    style={
                      Object {
                        "color": "inherit",
                        "display": "flex",
                        "height": "160px",
                      }
                    }
                  >
                    &lt;!-- Gorgias Chat Widget Start --&gt;
                    &lt;div id="gorgias-chat"&gt;
                    &lt;script&gt;window.gorgiasChatParameters = {}&lt;/script&gt;
                    &lt;script src="config.gorgias.io/foo/chat/bar" defer&gt;&lt;/script&gt;
                    &lt;/div&gt;
                    &lt;!-- Gorgias Chat Widget End --&gt;
                  </pre>
                </Alert>
              </Card>
              <Button
                className="copy"
                color="info"
                data-clipboard-target="#code-snippet"
                id="copy-code-snippet"
                tag="button"
                type="button"
              >
                <i
                  className="fa fa-fw fa-files-o mr-2"
                />
                Copy
              </Button>
            </div>
          </Form>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`RealtimeMessagingIntegrationInstall component should display the code snippet for custom integration 1`] = `
<div>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          mychat
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Installation
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <RealtimeMessagingIntegrationNavigation
    integration={
      Immutable.Map {
        id: 2,
        name: "mychat",
        type: "smooch_inside",
        decoration: Immutable.Map {
          header_color: "#789456",
          chat_icon_color: "#AB7891",
          conversation_color: "#B7B7B7",
          header_text: "some window title",
          introduction_text: "some introduction text",
          input_placeholder: "type here to send messages",
          send_button_text: "Lets goooo",
        },
        meta: Immutable.Map {
          app_token: "a86sd47a56sd4asd",
          script_url: "config.gorgias.io/foo/chat/bar",
        },
      }
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p>
          Let's install your chat on your website.
        </p>
        <div />
        <div
          className="form shopifyIntegrationsList"
        >
          <Button
            block={true}
            className="mb-2"
            color="secondary"
            onClick={[Function]}
            tag="button"
          >
            <img
              className="shopifyLogo"
              src="test-file-stub"
            />
            Add 
            chat
             on 
            mylittleintegration
          </Button>
          <p>
            Can't see your store here?
             
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/settings/integrations/shopify/new/"
            >
              Connect it to Gorgias
            </Link>
          </p>
          <div
            className="divider"
          >
            OR
          </div>
          <Form
            onSubmit={[Function]}
            tag="form"
          >
            <p>
              Copy the code below and paste it on your website above the
               
              <kbd>
                &lt;/body&gt;
              </kbd>
               
              tag:
            </p>
            <div
              className="snippet"
            >
              <Card
                className="p-0 mb-2"
                tag="div"
              >
                <Alert
                  className="m-0"
                  closeAriaLabel="Close"
                  color="info"
                  isOpen={true}
                  tag="div"
                  transition={
                    Object {
                      "appear": true,
                      "baseClass": "fade",
                      "baseClassActive": "show",
                      "enter": true,
                      "exit": true,
                      "in": true,
                      "mountOnEnter": false,
                      "onEnter": [Function],
                      "onEntered": [Function],
                      "onEntering": [Function],
                      "onExit": [Function],
                      "onExited": [Function],
                      "onExiting": [Function],
                      "tag": "div",
                      "timeout": 150,
                      "unmountOnExit": true,
                    }
                  }
                >
                  <pre
                    id="code-snippet"
                    style={
                      Object {
                        "color": "inherit",
                        "display": "flex",
                        "height": "160px",
                      }
                    }
                  >
                    &lt;!-- Gorgias Chat Widget Start --&gt;
                    &lt;div id="gorgias-chat"&gt;
                    &lt;script&gt;window.gorgiasChatParameters = {}&lt;/script&gt;
                    &lt;script src="config.gorgias.io/foo/chat/bar" defer&gt;&lt;/script&gt;
                    &lt;/div&gt;
                    &lt;!-- Gorgias Chat Widget End --&gt;
                  </pre>
                </Alert>
              </Card>
              <Button
                className="copy"
                color="info"
                data-clipboard-target="#code-snippet"
                id="copy-code-snippet"
                tag="button"
                type="button"
              >
                <i
                  className="fa fa-fw fa-files-o mr-2"
                />
                Copy
              </Button>
            </div>
          </Form>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`RealtimeMessagingIntegrationInstall component should display the list of Shopify stores without chats 1`] = `
<div>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          mychat
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Installation
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <RealtimeMessagingIntegrationNavigation
    integration={
      Immutable.Map {
        id: 2,
        name: "mychat",
        type: "smooch_inside",
        meta: Immutable.Map {
          shopify_integration_ids: Immutable.List [
            2,
          ],
          script_url: "config.gorgias.io/foo/chat/bar",
        },
      }
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p>
          Let's install your chat on your website.
        </p>
        <div />
        <div
          className="form shopifyIntegrationsList"
        >
          <Button
            block={true}
            className="mb-2"
            color="secondary"
            onClick={[Function]}
            tag="button"
          >
            <img
              className="shopifyLogo"
              src="test-file-stub"
            />
            Add 
            chat
             on 
            mylittleintegration
          </Button>
          <p>
            Can't see your store here?
             
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/settings/integrations/shopify/new/"
            >
              Connect it to Gorgias
            </Link>
          </p>
          <div
            className="divider"
          >
            OR
          </div>
          <Form
            onSubmit={[Function]}
            tag="form"
          >
            <p>
              Copy the code below and paste it on your website above the
               
              <kbd>
                &lt;/body&gt;
              </kbd>
               
              tag:
            </p>
            <div
              className="snippet"
            >
              <Card
                className="p-0 mb-2"
                tag="div"
              >
                <Alert
                  className="m-0"
                  closeAriaLabel="Close"
                  color="info"
                  isOpen={true}
                  tag="div"
                  transition={
                    Object {
                      "appear": true,
                      "baseClass": "fade",
                      "baseClassActive": "show",
                      "enter": true,
                      "exit": true,
                      "in": true,
                      "mountOnEnter": false,
                      "onEnter": [Function],
                      "onEntered": [Function],
                      "onEntering": [Function],
                      "onExit": [Function],
                      "onExited": [Function],
                      "onExiting": [Function],
                      "tag": "div",
                      "timeout": 150,
                      "unmountOnExit": true,
                    }
                  }
                >
                  <pre
                    id="code-snippet"
                    style={
                      Object {
                        "color": "inherit",
                        "display": "flex",
                        "height": "160px",
                      }
                    }
                  >
                    &lt;!-- Gorgias Chat Widget Start --&gt;
                    &lt;div id="gorgias-chat"&gt;
                    &lt;script&gt;window.gorgiasChatParameters = {}&lt;/script&gt;
                    &lt;script src="config.gorgias.io/foo/chat/bar" defer&gt;&lt;/script&gt;
                    &lt;/div&gt;
                    &lt;!-- Gorgias Chat Widget End --&gt;
                  </pre>
                </Alert>
              </Card>
              <Button
                className="copy"
                color="info"
                data-clipboard-target="#code-snippet"
                id="copy-code-snippet"
                tag="button"
                type="button"
              >
                <i
                  className="fa fa-fw fa-files-o mr-2"
                />
                Copy
              </Button>
            </div>
          </Form>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;
